--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   /* Set up the initial map center and zoom level */
   var map = L.map('map', {
-    center: [41.77, -72.69], // -33.965076, 18.542231
+    center: [-33.965076, 18.542231], // map coordinates
     zoom: 12,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
     scrollWheelZoom: false
   });
