--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
 mapboxgl.accessToken = '<pk.eyJ1IjoiaGJtYWxhbiIsImEiOiJjbGE5bmRlaG0wMDcxM29vZGkxdHdwdWtoIn0.SlojqWCvWwS-FcAuO0hLig>';
 const map = new mapboxgl.Map({
-    container: 'map', // container ID
+    container: 'L.map', // container ID
     style: 'mapbox://styles/hbmalan/cle2i1ly2002x01og9hpygnkx', // style URL
     center: [-74.5, 40], // starting position [-33.965076, 18.542231]
     zoom: 11 // starting zoom
