--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
   });
 
   /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
-mapboxgl.accessToken = '<pk.eyJ1IjoiaGJtYWxhbiIsImEiOiJjbGE5bmRlaG0wMDcxM29vZGkxdHdwdWtoIn0.SlojqWCvWwS-FcAuO0hLig>';
-const map = new mapboxgl.Map({
-    container: 'L.map', // container ID
-    style: 'mapbox://styles/hbmalan/cle2i1ly2002x01og9hpygnkx', // style URL
-    center: [-74.5, 40], // starting position [-33.965076, 18.542231]
-    zoom: 11 // starting zoom
-});
+  L.tileLayer(
+    'https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; <a href="https://osm.org/copyright">\
+        OpenStreetMap</a> contributors, &copy;\
+        <a href="https://carto.com/attribution">CARTO</a>'
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
