--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.77, -72.69]).addTo(map) // EDIT marker coordinates
-  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+  L.marker([-33.926443, 18.447864]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Lindani was here"); // EDIT pop-up text message
 
   </script>
 </body>
