--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
   /* Display a point marker with pop-up text */
   L.marker([-33.926443, 18.447864]).addTo(map) // EDIT marker coordinates
   .bindPopup("Lindani was here"); // EDIT pop-up text message
+    
+    var circle = L.circle([-33.928980, 18.445676], {
+    color: 'red',
+    fillColor: '#f03',
+    fillOpacity: 0.5,
+    radius: 500
+}).addTo(map);
 
   </script>
 </body>
