--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     var circle = L.circle([-33.928980, 18.445676], {
     color: 'red',
-    fillColor: '#f03',
+    fillColor: '#55e73c',
     fillOpacity: 0.5,
     radius: 500
 }).addTo(map);
