--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([-33.926443, 18.447864]).addTo(map) // EDIT marker coordinates
+  L.marker([-25.342174, 28.174752]).addTo(map) // EDIT marker coordinates
   .bindPopup("Lindani was here"); // EDIT pop-up text message
     
     var circle = L.circle([-33.928980, 18.445676], {
-    color: 'red',
+    color: '#55e73c',
     fillColor: '#55e73c',
-    fillOpacity: 0.5,
+    fillOpacity: 0.6,
     radius: 500
 }).addTo(map);
     
-    circle.bindPopup("I am a circle.");
+    circle.bindPopup("Lindani's Work");
 
   </script>
 </body>
