--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- Display the map and title with HTML division tags  -->
-  <div id="map-title">Cycle City 1</div>
+  <div id="map-title">Active Mobility Forum: Cape Town</div>
   <div id="map"></div>
 
   <!-- Create the interactive map content with JavaScript (.js) -->
