--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- Position the map and title with Cascading Style Sheet (CSS) -->
   <style>
   body { margin:0; padding:0; }
-  #map { position: absolute; top:0; bottom:0; right:0; left:0; }
-  #map-title { position: relative; margin-top: 10px; margin-left: 50px; float: left; background: white; border: 2px solid rgba(0,0,0,0.2); padding: 6px 8px; font-family: Helvetica; font-weight: bold; font-size: 24px; z-index: 800; }
+  #map { position: absolute; top:50px; bottom:0; right:0; left:0; }
+  #map-title { position: relative; margin-top: 10px; margin-left: 0px; float: left; background: rgba(27, 170, 87, .4); border: 0px solid rgba(0,0,0,0.2); padding: 6px 8px; font-family: arial; font-weight: bold; font-size: 36px; z-index: 800; }
   </style>
 </head>
 <body>
