--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   /* Set up the initial map center and zoom level */
   var map = L.map('map', {
-    center: [-33.976306, 18.537964], // map coordinates
+    center: [-33.981171413305574, 18.506203100170968], // map coordinates
     zoom: 11,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
     scrollWheelZoom: true
   });
@@ -41,7 +41,7 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([-33.981171413305574, 18.506203100170968]).addTo(map) // EDIT marker coordinates
+  L.marker([-33.22989054825171, 20.438329825496858]).addTo(map) // EDIT marker coordinates
   .bindPopup("Lindani was here"); // EDIT pop-up text message
     
     var circle = L.circle([-33.928980, 18.445676], {
