--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
     m = leafmap.Map()
 m.add_basemap("HYBRID")
 m.add_basemap("Esri.NatGeoWorldMap")
+    
+    m = Map(center=(50, 0), zoom=5)
+
+marker1 = Marker(name='marker1', location=(48, -2))
+marker2 = Marker(name='marker2', location=(50, 0))
+marker3 = Marker(name='marker3', location=(52, 2))
+m.add_layer(marker1)
+m.add_layer(marker2)
+m.add_layer(marker3)
+
+control = LayersControl(position='topright')
+m.add_control(control)
+
 
   /* Display a point marker with pop-up text */
   L.marker([-33.22989054825171, 20.438329825496858]).addTo(map) // EDIT marker coordinates
