--- a/index.html
+++ b/index.html
@@ -40,32 +40,9 @@
         <a href="https://carto.com/attribution">CARTO</a>'
   }).addTo(map);
     
-    m = leafmap.Map()
-m.add_basemap("HYBRID")
-m.add_basemap("Esri.NatGeoWorldMap")
-    
-    m = Map(center=(50, 0), zoom=5)
-
-mapnik = basemap_to_tiles(basemaps.OpenStreetMap.Mapnik)
-mapnik.base = True
-mapnik.name = 'Mapnik Layer'
-
-toner = basemap_to_tiles(basemaps.Stamen.Toner)
-toner.base = True
-toner.name = 'Toner Layer'
-
-bzh = basemap_to_tiles(basemaps.OpenStreetMap.BZH)
-bzh.base = True
-bzh.name = 'BZH layer'
-
-m = Map(center=(52, 10), zoom=8, layers=[mapnik, toner, bzh])
-
-m.add_control(LayersControl())
-
-m
 
 control = LayersControl(position='topright')
-m.add_control(control)
+l.add_control(control);
 
 
   /* Display a point marker with pop-up text */
