--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       
   var cyclebase = L.tileLayer('https://{s}.tile.thunderforest.com/cycle/{z}/{x}/{y}.png?apikey={apikey}', {
 	attribution: '&copy; <a href="http://www.thunderforest.com/">Thunderforest</a>, &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-	apikey: '<your apikey>',
+	apikey: '<b67a28b0f9574b0f913b1fc42c26882f>',
 });
 	  
  var layerControl = L.control.layers(baseMaps).addTo(map);
