--- a/index.html
+++ b/index.html
@@ -13,17 +13,6 @@
   <style>
   body { margin:0; padding:0; }
   #map { position: absolute; top:0px; bottom:0; right:0; left:0; }
-    
-      #basemaps-wrapper {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 10;
-    background: white;
-    padding: 10px;
-  }
-  #basemaps {
-    margin-bottom: 5px;
  
   </style>
 </head>
@@ -58,7 +47,7 @@
   var cyclebase = L.tileLayer('https://{s}.tile.thunderforest.com/cycle/{z}/{x}/{y}.png?apikey={apikey}', {
 	attribution: '&copy; <a href="http://www.thunderforest.com/">Thunderforest</a>, &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
 	apikey: '<b67a28b0f9574b0f913b1fc42c26882f>',
-});
+.addTo(map)});
 	  
  var layerControl = L.control.layers(baseMaps).addTo(map);
     
