--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <style>
   body { margin:0; padding:0; }
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
+  #map-title { position: relative; margin-top: 10px; margin-left: 50px; float: left; background: white; border: 2px solid rgba(0,0,0,0.2); padding: 6px 8px; font-family: Helvetica; font-weight: bold; font-size: 24px; z-index: 800; }
   </style>
 </head>
 <body>
@@ -25,21 +26,19 @@
   <script>
 
   /* Set up the initial map center and zoom level */
-    const map map = L.map('map', {
+  var map = L.map('map', {
     center: [-33.976306, 18.537964], // map coordinates
     zoom: 11,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
     scrollWheelZoom: false
   });
 
-  const basemaps = {
-    Cycling: L.tileLayer(
-    'https://tile.thunderforest.com/cycle/{z}/{x}/{y}.png?apikey=b67a28b0f9574b0f913b1fc42c26882f', {
+  /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
+  L.tileLayer(
+    'https://api.mapbox.com/styles/v1/hbmalan/cle2i1ly2002x01og9hpygnkx/tiles/256/{z}/{x}/{y}@2x?access_token=pk.eyJ1IjoiaGJtYWxhbiIsImEiOiJjbGE5bmRlaG0wMDcxM29vZGkxdHdwdWtoIn0.SlojqWCvWwS-FcAuO0hLig', {
       attribution: '&copy; <a href="https://osm.org/copyright">\
-        ThunderForest</a> contributors, &copy;\
-        <a href="https://carto.com/attribution">CARTO</a>',
-   basemaps.GreyBase.addTo(map);
-    
-    L.control.layers(basemaps).addTo(map);
+        Mapbox</a> contributors, &copy;\
+        <a href="https://carto.com/attribution">CARTO</a>'
+  }).addTo(map);
 
   /* Display a point marker with pop-up text */
   L.marker([-25.342174, 28.174752]).addTo(map) // EDIT marker coordinates
