--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
     radius: 200
 }).addTo(map);
     circle2.bindPopup("Hayden's Work");
+    
+      addMarkers(
+    lng = -33.941829 , lat = 18.489475,
+    label = "label w/ textsize 15px",
+    labelOptions = labelOptions(noHide = T, textsize = "15px")) %>%
+        
+        content <- paste(sep = "<br/>",
+  "<b><a href='http://www.samurainoodle.com'>Samurai Noodle</a></b>",
+  "606 5th Ave. S",
+  "Seattle, WA 98138"
+)
+
+leaflet() %>% addTiles() %>%
+  addPopups(-33.962506, 18.514404, content,
+    options = popupOptions(closeButton = TRUE)
 
   </script>
 </body>
