--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     fillOpacity: 0.6,
     radius: 500
 }).addTo(map);
-    circle1.bindPopup("Lindani's Work");
+    circle1.bindPopup("<b><a href='http://www.samurainoodle.com'>Samurai Noodle</a></b>",
+  "606 5th Ave. S",
+  "Seattle, WA 98138");
     
     var circle2 = L.circle([-33.969671, 18.474231], {
     color: '#55e73c',
@@ -58,7 +60,7 @@
     radius: 200
 }).addTo(map);
     circle2.bindPopup("Hayden's Work");
-    }
+   
   </script>
 </body>
 </html>
