--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Create the interactive map content with JavaScript (.js) -->
   <script>
 
-    content <- paste(sep = "<br/>";
+    content <- paste(sep = "<br/>"
                  
   /* Set up the initial map center and zoom level */
   var map = L.map('map', {
