--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     fillOpacity: 0.6,
     radius: 500
 }).addTo(map);
-    circle1.bindPopup("<b><a href='http://www.samurainoodle.com'>Samurai Noodle</a></b>606 5th Ave</b>Seattle, WA 98138");
+    circle1.bindPopup("<b><a href='http://www.samurainoodle.com'>Samurai Noodle</a></b>",
+  "606 5th Ave. S",
+  "Seattle, WA 98138");
     
     var circle2 = L.circle([-33.969671, 18.474231], {
     color: '#55e73c',
