--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
     radius: 200
 }).addTo(map);
     circle2.bindPopup("Hayden's Work");
+    
+    L.marker([-33.941359, 18.482308]).addTo(map)
+    .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
+    .openPopup();
    
   </script>
 </body>
