--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
     fillOpacity: 0.6,
     radius: 500
 }).addTo(map);
-    circle1.bindPopup("<b><a href='http://www.samurainoodle.com'>Samurai Noodle</a></b>",
-  "606 5th Ave. S",
-  "Seattle, WA 98138");
+    circle1.bindPopup('A pretty CSS3 popup.<br> Easily customizable.');
     
     var circle2 = L.circle([-33.969671, 18.474231], {
     color: '#55e73c',
