--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     fillOpacity: 0.6,
     radius: 500
 }).addTo(map);
-    circle1.bindPopup('A pretty CSS3 popup.<br> Easily customizable.<br><a href="www.haydenmalan.com/">hayden</a>');
+    circle1.bindPopup('A pretty CSS3 popup.<br> Easily customizable.<br><a href="https://www.w3schools.com/html/html_links.asp">hayden</a>');
     
     var circle2 = L.circle([-33.969671, 18.474231], {
     color: '#55e73c',
