--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     fillOpacity: 0.6,
     radius: 500
 }).addTo(map);
-    circle1.bindPopup('A pretty CSS3 popup.<br> Easily customizable.<br>grrrrrrrr');
+    circle1.bindPopup('A pretty CSS3 popup.<br> Easily customizable.<br>hjjjjj');
     
     var circle2 = L.circle([-33.969671, 18.474231], {
     color: '#55e73c',
