--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     fillOpacity: 0.6,
     radius: 500
 }).addTo(map);
-    circle1.bindPopup('<strong>Ciovita</strong><br>15 Cyclists<br>Representative: Lindani Khawunjika<br><a href="https://www.ciovita.co.za/">website</a>');
+    circle1.bindPopup('<strong>Ciovita</strong><br>Cyclists: 15<br>Representative: Lindani Khawunjika<br><a href="https://www.ciovita.co.za/">website</a>');
     
     var circle2 = L.circle([-33.969671, 18.474231], {
     color: '#55e73c',
@@ -57,7 +57,7 @@
     fillOpacity: 0.6,
     radius: 200
 }).addTo(map);
-    circle2.bindPopup('<strong>TKLA</strong><br>2 Cyclists<br>Representative: Hayden Malan<br><a href="https://www.tk-l-a.com/">website</a>');
+    circle2.bindPopup('<strong>TKLA</strong><br>Cyclists: 2<br>Representative: Hayden Malan<br><a href="https://www.tk-l-a.com/">website</a>');
    
   </script>
 </body>
