--- a/index.html
+++ b/index.html
@@ -1,171 +1,355 @@
 <!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Leaflet Map</title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-      crossorigin=""
-    />
-    <style type="text/css">
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
 
-    <script
-      src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-      integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-      crossorigin=""
-    ></script>
-    <script>
-      // TODO
-      // - [x] Add cycleOSM layer
-      // - [] Add strava layer (needs API key but otherwise should be easy with googling)
-      // - [] Make dots size relative to each other (clamped to between min and max)
-      // - [] and also possibly use the same method to clamp a PNG
+    <head>
 
-      // All the code for the leaflet map will come here
-      const map = L.map("map", {
-        center: [-34.000874, 18.539193],
-        zoom: 12,
-        scrollWheelZoom: true,
-      });
+        <meta charset="utf-8"/>
 
-      // 2. Add layers to the map
-      const basemaps = {
-        Base: L.tileLayer(
-          "https://api.mapbox.com/styles/v1/hbmalan/cle2i1ly2002x01og9hpygnkx/tiles/256/{z}/{x}/{y}@2x?access_token=pk.eyJ1IjoiaGJtYWxhbiIsImEiOiJjbGE5bmRlaG0wMDcxM29vZGkxdHdwdWtoIn0.SlojqWCvWwS-FcAuO0hLig",
-          {
-            attribution:
-              '&copy; <a href="https://osm.org/copyright">\
-        Mapbox</a> contributors, &copy;\
-        <a href="https://carto.com/attribution">CARTO</a>',
-          }
-        ),
-        CycleOSM: L.tileLayer(
-          " https://tile.thunderforest.com/cycle/{z}/{x}/{y}.png?apikey=b67a28b0f9574b0f913b1fc42c26882f",
-          {
-            attribution: "&copy; CycleOSM contributors",
-          }
-        ),
-        Strava: L.tileLayer(
-          "https://globalheat.strava.com/tiles/running/color3/{z}/{x}/{y}.png",
-          {
-            maxZoom: 17,
-            minZoom: 9,
-          }
-        ),
-        Places: L.tileLayer.wms("http://ows.mundialis.de/services/service?", {
-          layers: "OSM-Overlay-WMS",
-        }),
-      };
+        <title>Cape Town Cyclist Map</title>
 
-      basemaps.Base.addTo(map);
+        <link rel="icon" type="image/x-icon" href="AMF_Logo.png">
 
-      L.control.layers(basemaps).addTo(map);
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
 
-      // const marker10 = L.marker([-37.6703, 176.212]).addTo(map);
+        <style type="text/css">
 
-      const organisations = [
-        {
-          coordinates: [-33.92898, 18.445676],
-          cyclistsCount: 15,
-          name: "Ciovita",
-          representative: "Lindani Khawunjika",
-          website: "https://www.ciovita.co.za",
-        },
-        {
-          coordinates: [-33.969671, 18.474231],
-          cyclistsCount: 2,
-          name: "TKLA",
-          representative: "Hayden Malan",
-          website: "https://www.tk-l-a.com",
-        },
-      ];
-      const maxCyclistsCount = Math.max(
-        ...organisations.map((organisation) => organisation.cyclistsCount)
-      );
-      const minCyclistsCount = Math.min(
-        ...organisations.map((organisation) => organisation.cyclistsCount)
-      );
+            body {
 
-      const maxRadius = 700;
-      const minRadius = 200;
+                margin: 0;
 
-      const calculateRadius = (
-        maxNumber,
-        minNumber,
-        maxRadius,
-        minRadius,
-        n
-      ) => {
-        // work out how much percent of the way through from minNumber to maxNumber we are
-        // return that percent through the radius
-        const baselineN = n - minNumber;
-        const baselineMaxNumber = maxNumber - minNumber;
+                padding: 0;
 
-        const percentageThrough = baselineN / baselineMaxNumber;
+            }
 
-        return (maxRadius - minRadius) * percentageThrough + minRadius;
-      };
+            #map {
 
-      organisations.forEach((organisation) => {
-        // var greenIcon = L.icon({
-        //   iconUrl: "leaf-green.png",
+                width: 100vw;
 
-        //   iconSize: [38, 95], // size of the icon
-        //   shadowSize: [50, 64], // size of the shadow
-        //   iconAnchor: [22, 94], // point of the icon which will correspond to marker's location
-        //   shadowAnchor: [4, 62], // the same for the shadow
-        //   popupAnchor: [-3, -76], // point from which the popup should open relative to the iconAnchor
-        // });
+                height: 100vh;
 
-        // const greenIconMarker = L.marker(organisation.coordinates, {
-        //   icon: greenIcon,
-        // });
+            }
 
-        // greenIconMarker.addTo(map);
+            table {
 
-        // greenIconMarker.bindPopup(
-        //   `<strong>${organisation.name}</strong><br>Cyclists: ${organisation.cyclistsCount}<br>Representative: ${organisation.representative}<br><a href="https://www.ciovita.co.za/">website</a>`
-        // );
-        const circle1 = L.circle(organisation.coordinates, {
-          color: "#55e73c",
-          fillColor: "#55e73c",
-          fillOpacity: 0.6,
-          radius: calculateRadius(
-            maxCyclistsCount,
-            minCyclistsCount,
-            maxRadius,
-            minRadius,
-            organisation.cyclistsCount
-          ),
-        }).addTo(map);
-        circle1.bindPopup(
-          `<strong>${organisation.name}</strong><br>Cyclists: ${organisation.cyclistsCount}<br>Representative: ${organisation.representative}<br><a href="https://www.ciovita.co.za/">website</a>`
-        );
-      });
+                border-collapse: collapse;
 
-      // const circle2 = L.circle([-33.969671, 18.474231], {
-      //   color: "#55e73c",
-      //   fillColor: "#55e73c",
-      //   fillOpacity: 0.6,
-      //   radius: 200,
-      // }).addTo(map);
-      // circle2.bindPopup(
-      //   `<strong>TKLA</strong><br>Cyclists: 15<br>Representative: Hayden Malan<br><a href="https://www.tk-l-a.com/">website</a>`
-      // );
-    </script>
-  </body>
+                width: 80%;
+
+
+            }
+
+
+            td,
+            th {
+
+                border: 1px solid #dddddd;
+
+                text-align: left;
+
+                padding: 5px;
+
+            }
+
+            tr:nth-child(1) {
+
+                background-color: #58ad49;
+
+            }
+        </style>
+
+    </head>
+
+    <body>
+
+        <div id="map"></div>
+
+
+        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
+
+        <script>
+
+            // TODO
+
+            // - [x] Add cycleOSM layer
+
+            // - [] Add strava layer (needs API key but otherwise should be easy with googling)
+
+            // - [] Make dots size relative to each other (clamped to between min and max)
+
+            // - [] and also possibly use the same method to clamp a PNG
+
+
+            // All the code for the leaflet map will come here
+
+            const map = L.map("map", {
+
+                center: [
+                    -34.000874, 18.539193
+                ],
+
+                zoom: 11,
+
+                scrollWheelZoom: true
+
+            });
+
+
+            // 2. Add layers to the map
+
+            const basemaps = {
+
+                Base: L.tileLayer("https://api.mapbox.com/styles/v1/hbmalan/cle2i1ly2002x01og9hpygnkx/tiles/256/{z}/{x}/{y}@2x?access_token=pk.eyJ1IjoiaGJtYWxhbiIsImEiOiJjbGE5bmRlaG0wMDcxM29vZGkxdHdwdWtoIn0.SlojqWCvWwS-FcAuO0hLig", {
+
+                    attribution: '&copy; <a href="https://osm.org/copyright">\
+ Mapbox < /a> contributors, &copy;\
+
+        <a href="https://carto.com/attribution ">CycleOSM</a>',
+
+                }),
+
+                CycleOSM: L.tileLayer(" https://tile.thunderforest.com/cycle/{z}/{x}/{y}.png?apikey=b67a28b0f9574b0f913b1fc42c26882f", {attribution: "&copy; CycleOSM contributors"}),
+
+                Strava: L.tileLayer("https://globalheat.strava.com/tiles/running/color3/{z}/{x}/{y}.png", {
+
+                    maxZoom: 17,
+
+                    minZoom: 9
+
+                }),
+
+                Places: L.tileLayer.wms("http://ows.mundialis.de/services/service?", {layers: "OSM-Overlay-WMS"})
+
+            };
+
+
+            basemaps.Base.addTo(map);
+
+
+            L.control.layers(basemaps).addTo(map);
+
+
+            // const marker10 = L.marker([-37.6703, 176.212]).addTo(map);
+
+
+            const organisations = [
+
+                {
+
+                    coordinates: [
+                        -33.92898, 18.445676
+                    ],
+
+                    name: "Ciovita",
+
+                    cyclistsCount: 3191,
+
+                    genre: "Individual",
+
+                    representative: "Charl Neethling",
+
+                    address: "https://www.ciovita.co.za"
+
+                },
+
+                {
+
+                    coordinates: [
+                        -33.969671, 18.474231
+                    ],
+
+                    name: "TKLA",
+
+                    cyclistsCount: 3,
+
+                    genre: "Group",
+
+                    representative: "Hayden Malan",
+
+                    address: "https://www.tk-l-a.com"
+
+                },
+
+                {
+
+                    coordinates: [
+                        -33.928135, 18.423820
+                    ],
+
+                    name: "East City Cycles",
+
+                    cyclistsCount: 465,
+
+                    genre: "Club",
+
+                    representative: "Jarryd Haley",
+
+                    address: "https://www.eastcitycycles.com"
+
+                },
+
+                {
+
+                    coordinates: [
+                        -33.9238, 18.41520
+                    ],
+
+                    name: "Rook Cycles",
+
+                    cyclistsCount: 113,
+
+                    genre: "Club",
+
+                    representative: "Pang (Surname)",
+
+                    address: "https://www.rookcycles.com"
+
+                }, {
+
+                    coordinates: [
+                        -33.911729163379654, 18.39424392530954
+                    ],
+
+                    name: "Mother Amateur Cycling Club",
+
+                    cyclistsCount: 329,
+
+                    genre: "Club",
+
+                    representative: "Mat Keiser",
+
+                    address: "<a href=https://www.instagram.com/mother_amateur_bicycling_club/</td></tr>>website</a>"
+
+                }, {
+
+                    coordinates: [
+                        -33.99713886723101, 18.45176222264877
+                    ],
+
+                    name: "Trail Angels",
+
+                    cyclistsCount: 141,
+
+                    genre: "Club",
+
+                    representative: "Angel N.1",
+
+                    address: "https://www.trailangels.co.za"
+
+                },
+
+            ];
+
+            const maxCyclistsCount = Math.max(... organisations.map((organisation) => organisation.cyclistsCount));
+
+            const minCyclistsCount = Math.min(... organisations.map((organisation) => organisation.cyclistsCount));
+
+
+            const maxRadius = 250;
+
+            const minRadius = 10;
+
+
+            const calculateRadius = (maxNumber, minNumber, maxRadius, minRadius, n) => {
+
+                // work out how much percent of the way through from minNumber to maxNumber we are
+
+                // return that percent through the radius
+
+                const baselineN = n - minNumber;
+
+                const baselineMaxNumber = maxNumber - minNumber;
+
+
+                const percentageThrough = baselineN / baselineMaxNumber;
+
+
+                return(maxRadius - minRadius) * percentageThrough + minRadius;
+
+            };
+
+
+            organisations.forEach((organisation) => {
+
+                // var greenIcon = L.icon({
+
+                // iconUrl: "leaf-green.png",
+
+
+                // iconSize: [38, 95], // size of the icon
+
+                // shadowSize: [50, 64], // size of the shadow
+
+                // iconAnchor: [22, 94], // point of the icon which will correspond to marker's location
+
+                // shadowAnchor: [4, 62], // the same for the shadow
+
+                // popupAnchor: [-3, -76], // point from which the popup should open relative to the iconAnchor
+
+                // });
+
+
+                // const greenIconMarker = L.marker(organisation.coordinates, {
+
+                // icon: greenIcon,
+
+                // });
+
+
+                // greenIconMarker.addTo(map);
+
+
+                // greenIconMarker.bindPopup(
+
+                // `<strong>${organisation.name}</strong><br>Cyclists: ${organisation.cyclistsCount}<br>Representative: ${organisation.representative}<br><a href="https://www.ciovita.co.za/">website</a>`
+
+                // );
+
+                const circle1 = L.circle(organisation.coordinates, {
+
+                    color: "#55e73c",
+
+                    fillColor: "#55e73c",
+
+                    fillOpacity: 0.6,
+
+                    radius: calculateRadius(maxCyclistsCount, minCyclistsCount, maxRadius, minRadius, organisation.cyclistsCount)
+
+                }).addTo(map);
+
+                circle1.bindPopup(`<table><tr><th></th><th>${
+                    organisation.name
+                }</th></tr><tr><th>Cyclist Genre<th></td>${
+                    organisation.genre
+                }</td></th><strong></strong</th></tr><tr><th>Number of Cyclists<th></td>${
+                    organisation.cyclistsCount
+                }</td></tr><tr><th>Representative<th></td>${
+                    organisation.representative
+                }</td></tr><tr><th>(Optional)<br>Contact Link<th></td><a href="https://www.ciovita.co.za/</th></tr>">website</a>`);
+
+            });
+
+
+            // const circle2 = L.circle([-33.969671, 18.474231], {
+
+            // color: "#55e73c",
+
+            // fillColor: "#55e73c",
+
+            // fillOpacity: 0.6,
+
+            // radius: 200,
+
+            // }).addTo(map);
+
+            // circle2.bindPopup(
+
+            // `<strong>TKLA</strong><br>Cyclists: 15<br>Representative: Hayden Malan<br><a href="https://www.tk-l-a.com/">website</a>`
+
+            // );
+
+        </script>
+
+    </body>
+
 </html>
